@@ -7,7 +7,6 @@
 - sorting of the tree
 - string cleanups
 - add binary entropy check to password checker
-- fix drag/drop undo crashes
 - make result label in password checker wrap when text overflows
 - use icons instead of colors in password entry to indicate strength
   (see: epiphany address entry)
