@@ -2,6 +2,11 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.6 ]---------------
 
+2006-01-20  Erik Grinaker <erikg@codepoet.no>
+
+	* strip xml entities from password on clipboard copy or
+	drag/drop
+
 2006-01-19  Erik Grinaker <erikg@codepoet.no>
 
 	* fixed drag and drop undo/redo crashes
